# screenpipe

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  COVERAGE.md  Cargo.toml  DESIGN.md  LICENSE.md  Local Disk (C) - Shortcut.lnk  README.md  TESTING.md  rust-toolchain.toml
.cargo/: config.toml
.claude/skills/release/: SKILL.md
.claude/skills/screenpipe-api/: SKILL.md
.claude/skills/screenpipe-cli/: SKILL.md
.design-sync/: NOTES.md  config.json  conventions.md
.design-sync/docs/: Dock.md
.design-sync/previews/: Alert.tsx  AlertDialog.tsx  Badge.tsx  Button.tsx  Calendar.tsx  Card.tsx  Checkbox.tsx  CodeBlock.tsx  Command.tsx  ContextMenu.tsx  Dialog.tsx  Dock.tsx  DropdownMenu.tsx  HelpTooltip.tsx  Input.tsx  Label.tsx  MultiSelect.tsx  Popover.tsx  Progress.tsx  Select.tsx  Separator.tsx  Skeleton.tsx  Slider.tsx  Switch.tsx  Tabs.tsx  Textarea.tsx  Toast.tsx  Tooltip.tsx  ValidatedInput.tsx  ValidatedTextarea.tsx
.github/: pull_request_template.md
.github/actions/setup-sccache/: action.yml
.github/scripts/macos/: grant-screen-recording-tcc.sh  verify_screen_recording_tcc.c  wrap-binary-as-app-bundle.sh
.github/workflows/: benchmark.yml  ci.yml  e2e-macos.yml  e2e-test.yml  eval-diarization.yml  eval-meeting-detection.yml  gateway-e2e.yml  linux-appimage-smoke.yml  macos-intel-launch-smoke.yml  ort-init-smoke.yml  release-app.yml  release-browser-extension.yml  release-cli.yml  release-enterprise.yml  release-mcp.yml  sdk-release.yml  sdk.yml  sentry-cleanup.yml  style.yml  sync-skills.yml  test-cli-npm-e2e.yml  test-cli-npm.yml  test-signing.yml  windows-integration-test.yml
Formula/: screenpipe.rb
apps/screenpipe-app-tauri/: .gitignore  README.md  next.config.mjs  package.json  tsconfig.json  vitest.config.ts
apps/screenpipe-app-tauri/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  providers.tsx
apps/screenpipe-app-tauri/components/: app-entitlement-gate.test.tsx  app-entitlement-gate.tsx  app-sidebar.tsx  browser-pairing-dialog.tsx  browser-sidebar.tsx  changelog-dialog.tsx  chat-sidebar.tsx  dev-mode-settings.tsx  enterprise-license-prompt.tsx  enterprise-locked-setting.tsx  file-viewer-html-frame.tsx  live-signal.tsx  markdown.tsx  model-download-tracker.tsx  notification-bell.tsx  notification-handler.tsx  pipe-advisory-watcher.tsx  pipe-store.tsx  plan-expiration-notice.test.tsx  plan-expiration-notice.tsx  post-install-connections-modal.tsx  recording-status.tsx  share-logs-button.test.tsx  share-logs-button.tsx  speaker-assign-popover.tsx  standalone-chat.tsx  theme-provider.test.tsx  theme-provider.tsx  update-banner.tsx
apps/screenpipe-app-tauri/e2e/: COVERAGE.md  README.md  coverage-map.json  wdio.conf.ts
apps/screenpipe-app-tauri/lib/: ai-tools-mcp.ts  analytics-id.ts  app-entitlement.test.ts  app-entitlement.ts  audio-engine-resolution.ts  auth-guard.test.tsx  auth-guard.tsx  automation-pipe-evals.test.ts  automation-pipe-evals.ts  chat-storage.ts  chat-utils.test.ts  chat-utils.ts  cloud-token-mirror.test.ts  cloud-token-mirror.ts  first-run-guide.test.ts  first-run-guide.ts  frame-thumbnails.test.ts  frame-thumbnails.ts  notifications.test.ts  notifications.ts  pipe-execution-status.ts  pipe-ndjson-to-chat.ts  query-client.ts  source-citations.ts  summary-templates.ts  web-url.guard.test.ts  web-url.ts
apps/screenpipe-app-tauri/public/: CHANGELOG.md
apps/screenpipe-app-tauri/scripts/: build-frontend.js  build-frontend.test.js  issue-5198-monitor-playback-experiment.ts  pre_build.js  (+3 more)
coverage/: CORE.md  core-engine-map.json
crates/screenpipe-a11y/: Cargo.toml
crates/screenpipe-a11y/examples/: macos_subtree_probe.rs  macos_weburl_probe.rs  windows_probe_harness.rs
crates/screenpipe-a11y/src/: config.rs  incremental.rs  lib.rs
crates/screenpipe-a11y/src/platform/: linux.rs  macos.rs  windows.rs  windows_uia.rs  windows_uia_tests.rs
crates/screenpipe-a11y/src/tree/: macos.rs  mod.rs  windows.rs
crates/screenpipe-apple-intelligence/: Cargo.toml
crates/screenpipe-audio/: Cargo.toml
crates/screenpipe-audio-eval/: Cargo.toml
crates/screenpipe-capture/: Cargo.toml
crates/screenpipe-config/: Cargo.toml
crates/screenpipe-config/src/: defaults.rs  recording.rs
crates/screenpipe-connect/: Cargo.toml
crates/screenpipe-core/: Cargo.toml
crates/screenpipe-cpu-features/: Cargo.toml
crates/screenpipe-cpu-features/src/: lib.rs
crates/screenpipe-db/: Cargo.toml
crates/screenpipe-dock/: Cargo.toml  build.rs
crates/screenpipe-dock/src/: ipc.rs  main.rs  metrics.rs  parent_watch.rs
crates/screenpipe-dock/src/platform/: macos.rs  mod.rs  windows.rs
crates/screenpipe-dock/ui/: dock.slint
crates/screenpipe-engine/: Cargo.toml  build.rs
crates/screenpipe-events/: Cargo.toml
crates/screenpipe-gateway/: Cargo.toml  Dockerfile
crates/screenpipe-gateway/e2e/: docker-compose.yml  mcp_team_search.mjs  run.sh
crates/screenpipe-gateway/src/: api.rs  auth.rs  config.rs  control_plane.rs  error.rs  ingest.rs  lib.rs  main.rs  policy.rs  source.rs
crates/screenpipe-meeting-eval/: Cargo.toml  build.rs
crates/screenpipe-redact/: Cargo.toml
crates/screenpipe-rfdetr-mlx/: Cargo.toml
crates/screenpipe-screen/: Cargo.toml
crates/screenpipe-secrets/: Cargo.toml
crates/screenpipe-sqlite-coordinator/: Cargo.toml
crates/screenpipe-sqlite-coordinator/src/: lib.rs
crates/screenpipe-sync/: Cargo.toml
crates/screenpipe-team-memory/: Cargo.toml
crates/screenpipe-telemetry-wire/: Cargo.toml
crates/screenpipe-telemetry-wire/src/: keys.rs  lib.rs  manifest.rs  records.rs
crates/screenpipe-vault/: Cargo.toml
docker/cloud-pipes/: Dockerfile  README.md  controller.sh  runner.ts  setup-host.sh
docs/: TIMELINE_VIDEO_SPEC.md
docs/benchmarks/: SCR-164-frame-thumbnails.md
ee/desktop-rust/: enterprise_policy.rs  enterprise_sync.rs  enterprise_upload.rs
ee/sdk/: Cargo.toml  LICENSE.md  README.md  index.d.ts  package.json
scripts/: benchmark-search-4474.ts  regenerate-locks.sh
scripts/dev-vm/: README.md  provision.sh  run.sh  setup.sh
scripts/tcc-grant/: README.md  tcc-grant.sh
(+640 files in other folders)
